--- a/cnode/pages/novice/novice.wxml
+++ b/cnode/pages/novice/novice.wxml
@@ -1,1 +1,33 @@
-<p>这是car</p>
+<view class="inner topic">
+  <view class="topic_content">
+    <view class="markdown-text">
+      <view class="h2">Node.js 入门</view>
+      <view>《快速搭建 Node.js 开发环境以及加速 npm》</view>
+      <p><a>http://fengmk2.com/blog/2014/03/node-env-and-faster-npm.html</a></p>
+      <view>《Node.js 包教不包会》</view>
+      <p><a>https://github.com/alsotang/node-lessons</a></p>
+      <view>《ECMAScript 6入门》</view>
+      <p><a>http://es6.ruanyifeng.com/</a></p>
+      <view>《七天学会NodeJS》</view>
+      <p><a>https://github.com/nqdeng/7-days-nodejs</a></p>
+      <view class="h2">Node.js 资源</view>
+      <view>《前端资源教程》</view>
+      <p><a>https://cnodejs.org/topic/56ef3edd532839c33a99d00e</a></p>
+      <view>《国内的 npm 镜像源》</view>
+      <p><a>http://cnpmjs.org/</a></p>
+      <view>《node weekly》</view>
+      <p><a>http://nodeweekly.com/issues</a></p>
+      <view>《node123-node.js中文资料导航》</view>
+      <p><a>https://github.com/youyudehexie/node123</a></p>
+      <view>《A curated list of delightful Node.js packages and resources》</view>
+      <p><a>https://github.com/sindresorhus/awesome-nodejs</a></p>
+      <view>《Node.js Books》</view>
+      <p><a>https://github.com/pana/node-books</a></p>
+      <view class="h2">Node.js 名人</view>
+      <view>《名人堂》</view>
+      <p><a>https://github.com/cnodejs/nodeclub/wiki/名人堂</a></p>
+      <view class="h2">Node.js 服务器</view>
+      <p>新手搭建 Node.js 服务器，推荐使用无需备案的 <a>DigitalOcean(https://www.digitalocean.com/)</a></p>
+    </view>
+  </view>
+</view>
