--- a/cnode/pages/about/about.wxss
+++ b/cnode/pages/about/about.wxss
@@ -1,8 +1,18 @@
+@import "../../base.wxss";
+
 .log-list {
   display: flex;
   flex-direction: column;
   padding: 40rpx;
 }
+
 .log-item {
   margin: 10rpx;
+}
+
+.h3 {
+  font-weight: 900;
+  font-size: 20px;
+  margin: 30px 0 15px;
+  border-bottom: 1px solid #eee;
 }
