--- a/cnode/pages/detail/detail.wxss
+++ b/cnode/pages/detail/detail.wxss
@@ -1,7 +1,7 @@
 @import "/wxParse/wxParse.wxss";
 @import "../../weui.wxss";
 @import "../../iconfont.wxss";
-
+@import "../../base.wxss";
 .page {
   padding: 20px 5px 20px;
 }
