--- a/cnode/pages/index/index.wxml
+++ b/cnode/pages/index/index.wxml
@@ -5,13 +5,13 @@
     <text class="userinfo-nickname">{{userInfo.nickName}}</text>
   </view>
 </view> -->
-<swiper autoplay="auto" interval="5000" duration="500">
+<!-- <swiper autoplay="auto" interval="5000" duration="500">
   <block wx:for="{{imgUrls}}">
     <swiper-item>
       <image src="{{item}}" class="slide-image" />
     </swiper-item>
   </block>
-</swiper>
+</swiper> -->
 <view class="weui-panel weui-panel_access">
   <view class="weui-panel__hd">
     <ul class="weui-media-box__info">
